# zero-tensor

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: lib.rs
src/buffer/: buffer.rs  mod.rs  tensor_meta.rs
src/dataset/: dataset.rs  item.rs  mod.rs
src/producer/: producer.rs
zero-tensor-py/: pyproject.toml
zero-tensor-py/benchmarks/: throughput_bench.py
zero-tensor-py/src/zero_tensor_py/: __init__.py  consumer.py  protocol.py
zero-tensor-py/tests/: test_consumer.py
zero-tensor-rs/: Cargo.toml
zero-tensor-rs/src/: lib.rs
zero-tensor-rs/src/buffer/: buffer.rs  mod.rs
zero-tensor-rs/src/dataset/: dataset.rs  item.rs  mod.rs
zero-tensor-rs/src/producer/: mod.rs  producer.rs
zero-tensor-rs/tests/: integration_consumer.py  integration_producer.rs  integration_signals.rs
