[project]
name = "zero-tensor-py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "stepzak", email = "stepanzakatin@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0"
]

[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "black>=24.0.0",
    "ruff>=0.3.0",
]
